<resources>
    <string name="app_name">Virtual Glasses</string>
    <string name="catalogue_description">Take a look through the catalogue and pick a frame you would like to try on.</string>
    <string name="gallery_description">Check out the photos of yourself you\'ve taken, tap to review them.</string>
    <string name="gallery_deleteText">Click here to delete your saved photos (will only delete photos saved by this app)</string>
    <string name="try_on_front">Front</string>
    <string name="try_on_right">Right Arm</string>
    <string name="try_on_left">Left Arm</string>
    <string name="try_on_lenses">Lenses</string>
    <string name="try_on_red">Red</string>
    <string name="try_on_green">Green</string>
    <string name="try_on_blue">Blue</string>
    <string name="try_on_opacity">Opacity</string>
    <string name="folder_name">/VirtualGlasses</string>

    <string name="title_activity_try_on">TryOnActivity</string>

    <string name="title_activity_photo_viewer">PhotoViewer</string>
    <string name="send_to">Share</string>
</resources>
