<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bournemouthuniversity.afaiers.virtualglassesdraft.TryOnActivity"
    android:id="@+id/root_view"
    android:keepScreenOn="true">

    <com.bournemouthuniversity.afaiers.virtualglassesdraft.CameraPreview
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/cam_preview"
        />

    <com.bournemouthuniversity.afaiers.virtualglassesdraft.TryOnSurface
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/try_on_surface"
        />

    <ImageView
        android:id="@+id/screen_flash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:visibility="invisible"
        app:srcCompat="@android:color/background_light" />

    <Button
        android:id="@+id/capture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="Take Picture"/>

    <LinearLayout
        android:id="@+id/scale_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_overlay"
        android:orientation="vertical"
        android:visibility="visible">

        <SeekBar
            android:id="@+id/scale_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="10dp"
            android:progress="50" />

        <TextView
            android:id="@+id/scale_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/scale_bar"
            android:layout_alignStart="@+id/scale_bar"
            android:layout_below="@+id/scale_bar"
            android:layout_margin="@dimen/cardview_default_elevation"
            android:gravity="center"
            android:paddingBottom="@dimen/standard_margin"
            android:text="Scale" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/selection_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black_overlay"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/front_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/standard_margin"
            android:text="@string/try_on_front"
            android:visibility="visible" />

        <Button
            android:id="@+id/left_arm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/standard_margin"
            android:text="@string/try_on_left" />

        <Button
            android:id="@+id/right_arm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/standard_margin"
            android:text="@string/try_on_right" />

        <Button
            android:id="@+id/lenses_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/standard_margin"
            android:text="@string/try_on_lenses" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/colour_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/selection_bar"
        android:background="@color/black_overlay"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cardview_default_radius"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/try_on_red" />

        <SeekBar
            android:id="@+id/red_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cardview_default_radius"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cardview_default_radius"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:text="@string/try_on_green" />

        <SeekBar
            android:id="@+id/green_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cardview_default_radius"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cardview_default_radius"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:text="@string/try_on_blue" />

        <SeekBar
            android:id="@+id/blue_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cardview_default_radius"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cardview_default_radius"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:text="@string/try_on_opacity" />

        <SeekBar
            android:id="@+id/opacity_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cardview_default_radius"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/customise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/standard_margin"
        android:background="@null"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:background="@null"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</RelativeLayout>
